made small refinements to site ux

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1,11 +1,12 @@
 {
-  "name": "Project #3",
+  "name": "Cook Consulting",
   "firstRun": false,
   "exportConfig": true,
   "fileConfigs": [],
   "fileTree": {
     "expandedDirs": [
-      "styles"
+      "styles",
+      "styles/partials"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
