refined site responsive design and updated directory structure in preparation for final project submission

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -5,8 +5,8 @@
   "fileConfigs": [],
   "fileTree": {
     "expandedDirs": [
-      "styles",
-      "styles/partials"
+      "styles/partials",
+      "styles"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -31,21 +31,20 @@
         "styles/partials/_variables.scss",
         "styles/partials/_mixins.scss",
         "styles/partials/_site.scss",
-        "styles/pages/_overTheTop.scss",
-        "styles/pages/_header.scss",
-        "styles/pages/_headerAfter.scss",
-        "styles/pages/_workSection.scss",
-        "styles/pages/_aboutSection.scss",
-        "styles/pages/_projectsSection.scss",
-        "styles/pages/_contactSection.scss",
-        "styles/pages/_getMoney.scss",
-        "styles/pages/_footer.scss",
+        "styles/sections/_overTheTop.scss",
+        "styles/sections/_header.scss",
+        "styles/sections/_headerAfter.scss",
+        "styles/sections/_work.scss",
+        "styles/sections/_about.scss",
+        "styles/sections/_projects.scss",
+        "styles/sections/_getMoney.scss",
+        "styles/sections/_footer.scss",
         "styles/pages/_door.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
